--- a/app/src/main/res/layout/date_item_preview.xml
+++ b/app/src/main/res/layout/date_item_preview.xml
@@ -37,7 +37,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewName"
+                    android:id="@+id/tvDate"
                     android:layout_width="89dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
