--- a/app/src/main/res/layout/fragment_slot_view.xml
+++ b/app/src/main/res/layout/fragment_slot_view.xml
@@ -28,7 +28,7 @@
         app:layout_constraintGuide_begin="237dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTime"
+        android:id="@+id/rvSlot"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
