Working on AlertDialog Mood: Sloppy TODO: Network check,UI,timeCalc

--- a/app/src/main/res/layout/date_item_preview.xml
+++ b/app/src/main/res/layout/date_item_preview.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:layout_margin="5dp">
 
     <LinearLayout
@@ -38,12 +38,13 @@
 
                 <TextView
                     android:id="@+id/tvDate"
-                    android:layout_width="89dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:text="Android Name"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:text="___"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
