--- a/app/src/main/res/layout/slot_item_preview.xml
+++ b/app/src/main/res/layout/slot_item_preview.xml
@@ -21,11 +21,12 @@
 
     <TextView
         android:id="@+id/tvAppointments"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/tvTime"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/tvTime"
         app:layout_constraintTop_toTopOf="@+id/tvTime" />
 </androidx.constraintlayout.widget.ConstraintLayout>
