Halfway through, refer list Mood: Sloppy TODO: _;

--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/logout"
         android:title="Logout"
         android:icon="@drawable/logout"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom|withText"/>
 
 
 </menu>
