--- a/app/src/main/res/menu/author_menu.xml
+++ b/app/src/main/res/menu/author_menu.xml
@@ -6,14 +6,14 @@
         android:id="@+id/add_dates"
         android:title="Open Booking"
         android:icon="@drawable/add_dates"
-        app:showAsAction="always"
+        app:showAsAction="always|withText"
         />
 
     <item
         android:id="@+id/logout"
         android:title="Logout"
         android:icon="@drawable/logout"
-        app:showAsAction="always"/>
+        app:showAsAction="always|withText"/>
 
 
 </menu>
