Akshat1.0 Mood: Sloppy TODO: _;

--- a/app/src/main/res/layout/fragment_add_slot.xml
+++ b/app/src/main/res/layout/fragment_add_slot.xml
@@ -31,11 +31,11 @@
             android:id="@+id/openBookingb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="340dp"
+            android:layout_marginBottom="8dp"
             android:text="Open Booking"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/evFrom"
