--- a/app/src/main/res/layout/fragment_add_slot.xml
+++ b/app/src/main/res/layout/fragment_add_slot.xml
@@ -65,7 +65,7 @@
             android:id="@+id/tvFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="From:"
             android:textColor="#000000"
             android:textSize="24sp"
@@ -73,8 +73,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.162"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView"
-            app:layout_constraintVertical_bias="0.066" />
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/evTo"
@@ -86,6 +86,15 @@
             app:layout_constraintBottom_toBottomOf="@+id/tvTo"
             app:layout_constraintStart_toEndOf="@+id/tvTo"
             app:layout_constraintTop_toTopOf="@+id/tvTo" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Time in 24 Hours (hh:mm):"
+            app:layout_constraintStart_toStartOf="@+id/tvFrom"
+            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
