--- a/app/src/main/res/layout/fragment_user_details_form.xml
+++ b/app/src/main/res/layout/fragment_user_details_form.xml
@@ -105,6 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="Book your Slot"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
