--- a/app/src/main/res/navigation/dashboard_user_graph.xml
+++ b/app/src/main/res/navigation/dashboard_user_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/slotViewUser"
-        android:name="com.example.akshat1.fragments.SlotViewUser"
+        android:name="com.example.NIC_Dungarpur.fragments.SlotViewUser"
         android:label="fragment_slot_view_user"
         tools:layout="@layout/fragment_slot_view_user" >
         <action
@@ -19,11 +19,11 @@
     </fragment>
     <fragment
         android:id="@+id/userDetailsForm"
-        android:name="com.example.akshat1.fragments.UserDetailsForm"
+        android:name="com.example.NIC_Dungarpur.fragments.UserDetailsForm"
         android:label="fragment_user_details_form"
         tools:layout="@layout/fragment_user_details_form" />
     <fragment
         android:id="@+id/viewDetailsForm"
-        android:name="com.example.akshat1.fragments.ViewDetailsForm"
+        android:name="com.example.NIC_Dungarpur.fragments.ViewDetailsForm"
         android:label="ViewDetailsForm" />
 </navigation>
