--- a/app/src/main/res/navigation/login_graph.xml
+++ b/app/src/main/res/navigation/login_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.akshat1.fragments.LoginFragment"
+        android:name="com.example.NIC_Dungarpur.fragments.LoginFragment"
         android:label="fragment_login_"
         tools:layout="@layout/fragment_login" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/signupFragment"
-        android:name="com.example.akshat1.fragments.SignupFragment"
+        android:name="com.example.NIC_Dungarpur.fragments.SignupFragment"
         android:label="fragment_signup_"
         tools:layout="@layout/fragment_signup" />
 </navigation>
