--- a/app/src/main/res/layout/fragment_user_details_form.xml
+++ b/app/src/main/res/layout/fragment_user_details_form.xml
@@ -16,6 +16,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="19dp"
+                android:layout_marginTop="16dp"
+                android:text="Time in 24 Hours:"
+                app:layout_constraintStart_toStartOf="@+id/etVisitPurpose"
+                app:layout_constraintTop_toBottomOf="@+id/etVisitPurpose" />
+
             <EditText
                 android:id="@+id/etName"
                 android:layout_width="wrap_content"
@@ -61,7 +70,7 @@
                 android:id="@+id/tvFormDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:text="TextView"
                 app:layout_constraintStart_toStartOf="@+id/tvFormTime"
                 app:layout_constraintTop_toBottomOf="@+id/tvFormTime" />
@@ -92,11 +101,11 @@
             <TextView
                 android:id="@+id/tvFormTime"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_height="19dp"
+                android:layout_marginTop="8dp"
                 android:text="TextView"
                 app:layout_constraintStart_toStartOf="@+id/etVisitPurpose"
-                app:layout_constraintTop_toBottomOf="@+id/etVisitPurpose" />
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <Button
                 android:id="@+id/Formbtn"
@@ -117,10 +126,10 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.512"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.609" />
+                app:layout_constraintVertical_bias="0.693" />
 
             <TextView
                 android:id="@+id/tvAPI"
